--- a/app/src/main/res/layout/fragment_sach_.xml
+++ b/app/src/main/res/layout/fragment_sach_.xml
@@ -3,22 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.ThanhVienFragment">
+    tools:context=".fragment.Sach_Fragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_thanhvien"
+            android:id="@+id/rcv_sach"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_marginBottom="24dp"
-            android:backgroundTint="#3BBAFF"
+            android:backgroundTint="@color/blue_A400"
             android:layout_marginRight="24dp"
             android:src="@drawable/baseline_add"
             android:layout_alignParentBottom="true"
