--- a/app/src/main/res/layout/item_loai_sach.xml
+++ b/app/src/main/res/layout/item_loai_sach.xml
@@ -1,51 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:padding="12dp">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/item_style"
-        android:padding="12dp">
+        android:padding="14dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
                 android:textStyle="bold"
-                android:id="@+id/tv_matv"
+                android:id="@+id/tv_maLoai"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mã TV: 01"
+                android:text="Mã Loại: 01"
                 android:textSize="16sp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:layout_marginLeft="05dp"/>
             <TextView
+                android:singleLine="true"
+                android:ellipsize="end"
                 android:textStyle="bold"
-                android:id="@+id/tv_hoten"
+                android:id="@+id/tv_tenLoai"
                 android:layout_marginTop="6dp"
-                android:layout_width="wrap_content"
+                android:layout_width="280dp"
                 android:layout_height="wrap_content"
-                android:text="Tên TV: Nguyễn Văn A"
+                android:text="Tên Loại: CNTT"
                 android:textSize="16sp"
-                android:textColor="@color/black"/>
-            <TextView
-                android:textStyle="bold"
-                android:id="@+id/tv_namsinh"
-                android:layout_marginTop="6dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Năm sinh: 2004"
-                android:textSize="16sp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:layout_marginLeft="05dp"/>
 
         </LinearLayout>
+
         <ImageButton
             android:id="@+id/btn_delete"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/remove"/>
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:background="@drawable/remove" />
     </RelativeLayout>
 </RelativeLayout>
