--- a/app/src/main/res/layout/item_sach.xml
+++ b/app/src/main/res/layout/item_sach.xml
@@ -14,28 +14,48 @@
             android:orientation="vertical">
             <TextView
                 android:textStyle="bold"
-                android:id="@+id/tv_matv"
+                android:id="@+id/tv_masach"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mã TV: 01"
+                android:text="Mã Sách: 01"
+                android:textSize="16sp"
+                android:textColor="@color/black"/>
+            <TextView
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:textStyle="bold"
+                android:id="@+id/tv_tensach"
+                android:layout_marginTop="6dp"
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:text="Tên Sách: Lập trình Javascrip cơ bản"
                 android:textSize="16sp"
                 android:textColor="@color/black"/>
             <TextView
                 android:textStyle="bold"
-                android:id="@+id/tv_hoten"
+                android:id="@+id/tv_giathue"
                 android:layout_marginTop="6dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tên TV: Nguyễn Văn A"
+                android:text="Giá thuê: 5.000"
                 android:textSize="16sp"
                 android:textColor="@color/black"/>
             <TextView
                 android:textStyle="bold"
-                android:id="@+id/tv_namsinh"
+                android:id="@+id/tv_loaisach"
                 android:layout_marginTop="6dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Năm sinh: 2004"
+                android:text="Loại sách: CNTT"
+                android:textSize="16sp"
+                android:textColor="@color/black"/>
+            <TextView
+                android:textStyle="bold"
+                android:id="@+id/tv_namXB"
+                android:layout_marginTop="6dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Năm xuất bản: năm"
                 android:textSize="16sp"
                 android:textColor="@color/black"/>
 
@@ -44,8 +64,8 @@
             android:id="@+id/btn_delete"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:background="@drawable/remove"/>
     </RelativeLayout>
 </RelativeLayout>
