--- a/app/src/main/res/layout/dialog_phieu_muon.xml
+++ b/app/src/main/res/layout/dialog_phieu_muon.xml
@@ -72,7 +72,7 @@
             android:paddingHorizontal="15dp" />
 
         <EditText
-            android:id="@+id/edt_namsinh"
+            android:id="@+id/edt_tienThue"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginHorizontal="30dp"
@@ -80,6 +80,33 @@
             android:background="@drawable/khung_input_login"
             android:hint="Nhập năm sinh"
             android:paddingHorizontal="15dp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tình trạng:"
+                android:textColor="@color/black"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+
+            <CheckBox
+                android:textColor="@color/red_A400"
+                android:id="@+id/chk_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="Chưa trả sách"
+                android:textSize="18dp"
+                android:textStyle="bold"/>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
