--- a/app/src/main/res/layout/item_phieumuon.xml
+++ b/app/src/main/res/layout/item_phieumuon.xml
@@ -6,7 +6,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/item_style"
+        android:background="@drawable/shadow"
         android:padding="12dp">
         <LinearLayout
             android:id="@+id/w_content"
@@ -20,7 +20,7 @@
                 android:layout_height="wrap_content"
                 android:text="Mã PM: 01"
                 android:textSize="16sp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/gray_4d0"/>
             <TextView
                 android:singleLine="true"
                 android:ellipsize="end"
@@ -59,7 +59,7 @@
             android:layout_alignParentRight="true"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:background="@drawable/remove"/>
+            android:background="@drawable/img_delete"/>
         <TextView
             android:layout_below="@id/w_content"
             android:layout_alignParentRight="true"
@@ -70,7 +70,7 @@
             android:layout_height="wrap_content"
             android:text="Ngày: 01/01/2020"
             android:textSize="16sp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/gray_4d0"/>
         <TextView
             android:layout_alignParentRight="true"
             android:layout_above="@id/tv_ngay"
@@ -79,8 +79,8 @@
             android:layout_marginTop="6dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Đã trả sách"
+            android:text="@string/trangthai_datra"
             android:textSize="16sp"
-            android:textColor="#3F51B5"/>
+            android:textColor="@color/blue_A400"/>
     </RelativeLayout>
 </RelativeLayout>
