--- a/app/src/main/res/layout/item_spinner_selected.xml
+++ b/app/src/main/res/layout/item_spinner_selected.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="12dp"
-    android:background="@drawable/item_style">
+    android:background="@color/gray_80d">
     <TextView
         android:id="@+id/tv_maLoai"
         android:layout_width="wrap_content"
