--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
     <item android:id="@+id/nav_QLPM"
-        android:title="Quản lý phiếu mượn"
+        android:title="Quản lý Phiếu mượn"
         android:icon="@drawable/home"/>
     <item android:id="@+id/nav_QLLS"
-        android:title="Quản lý loại sách"
+        android:title="Quản lý Loại sách"
         android:icon="@drawable/book"/>
     <item android:id="@+id/nav_QLS"
-        android:title="Quản lý sách"
+        android:title="Quản lý Sách"
         android:icon="@drawable/openbook"/>
     <item android:id="@+id/nav_QLTV"
-        android:title="Quản lý thành viên"
+        android:title="Quản lý Thành viên"
         android:icon="@drawable/group"/>
     <item android:title="Thống kê">
         <menu>
             <item android:id="@+id/nav_ThongKeTop"
-                android:title="Top 10 sách mượn nhiều nhất"
+                android:title="Top 10 Sách mượn nhiều nhất"
                 android:icon="@drawable/top10"/>
             <item android:id="@+id/nav_ThongKeDT"
                 android:title="Doanh thu"
