--- a/app/src/main/res/layout/dialog_sach.xml
+++ b/app/src/main/res/layout/dialog_sach.xml
@@ -61,6 +61,15 @@
             android:background="@drawable/khung_input_login"
             android:hint="Nhập giá thuê"
             android:paddingHorizontal="15dp" />
+        <EditText
+            android:id="@+id/edt_namXB"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginVertical="10dp"
+            android:background="@drawable/khung_input_login"
+            android:hint="Năm xuất bản"
+            android:paddingHorizontal="15dp" />
         <Spinner
             android:background="#00000000"
             android:layout_marginTop="24dp"
