--- a/app/src/main/res/layout/item_loaisach.xml
+++ b/app/src/main/res/layout/item_loaisach.xml
@@ -6,8 +6,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/shadow"
-        android:padding="12dp">
+        android:background="@drawable/item_style"
+        android:padding="20dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,12 +33,13 @@
                 android:textColor="@color/black"/>
 
         </LinearLayout>
+
         <ImageButton
             android:id="@+id/btn_delete"
-            android:layout_centerInParent="true"
-            android:layout_alignParentRight="true"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:background="@drawable/img_delete"/>
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:background="@drawable/remove" />
     </RelativeLayout>
 </RelativeLayout>
