--- a/app/src/main/res/layout/item_view_spinner.xml
+++ b/app/src/main/res/layout/item_view_spinner.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal"
     android:padding="12dp"
     android:gravity="center"
-    android:background="@drawable/shadow">
+    android:background="@drawable/item_style">
     <TextView
         android:id="@+id/tv_maLoai"
         android:layout_width="wrap_content"
